# the-scripting-language-tournament

./: README.md  flake.nix
1-navigation-optimal/: README.md  dune  dune-project  len.py  main-comments.ml  main.ml  main2.ml  main_comments.ml  navigation-optimal.opam  solution.c  solution.sh  solution.ts
1-navigation-optimal/ruby/: main.rb
1-navigation-optimal/ruby/lib/: navigation_optimal.rb
1-navigation-optimal/ruby/test/: navigation_optimal.rb
1-navigation-optimal/ruby/util/: svg.rb
2-baked-cookie/: README.md  bake.py  dune-project  main.ml  main_comments.ml  unbake.sh
2-baked-cookie/clang/: main.c
2-baked-cookie/ocaml/: baked-cookie.opam  dune
2-baked-cookie/ruby/: Gemfile  main.rb  the-scripting-language-tournament.gemspec
2-baked-cookie/ruby/lib/: baked_cookie.rb
2-baked-cookie/ruby/test/: baked_cookie.rb
2-baked-cookie/ts/: package.json  unbake.ts
3-lost-in-files/: README.md  dune  main.ml  main.ts  main_comments.ml  package.json  solution.sh  tsconfig.json
3-lost-in-files/clang/: build.sh  main.c
3-lost-in-files/ocaml/: README.md  dune-project  lost-in-files.opam
3-lost-in-files/ruby/: main.rb
3-lost-in-files/ruby/lib/: lost_in_files.rb
3-lost-in-files/ruby/test/: lost_in_files.rb
3-lost-in-files/sample/: test1.txt
4-tic-tac-boom/: .clangd  .gitignore  .justfile  Cargo.toml  Makefile  README.md  solution.c  solution.ml  solution.rb  solution.ts  solution_comments.ml  stub.c  test.bash
4-tic-tac-boom/src/: main.rs
4-tic-tac-boom/tic-tac-boom/: .gitignore  Cargo.toml  Makefile  flake.nix  solution.c  solution.rb  solution.sh  solution.ts  solution_comments.ts
4-tic-tac-boom/tic-tac-boom/src/: main.rs
5-wavedash/: README.md  solution.c  solution.ml  solution.sh  solution_comments.ml
5-wavedash/ocaml/: README.md  solution.ml  solution_comments.ml
5-wavedash/ruby/: main.rb
5-wavedash/ruby/lib/: wavedash.rb
5-wavedash/typescript/: README.md  solution.ts  solution_comments.ts
(+2 files in other folders)
