(lang dune 3.19)

(name navigation-optimal)

(generate_opam_files true)

(source
 (github nigelwithrow/the-scripting-language-tournament-ocaml))

(authors "Nigel Withrow <nigelwithrow78@gmail.com>")

(maintainers "Nigel Withrow <nigelwithrow78@gmail.com>")

(package
 (name navigation-optimal)
 (depends ocaml ocamlgraph)
 (tags ()))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
