(lang dune 3.19)

(name baked-cookie)

(generate_opam_files true)

(source
 (github nigelwithrow/the-scripting-language-tournament-ocaml))

(authors "Nigel Withrow <nigelwithrow78@gmail.com>")

(maintainers "Nigel Withrow <nigelwithrow78@gmail.com>")

(package
 (name baked-cookie)
 (depends ocaml bimage bimage-unix)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
