[package]
name = "tic-tac-boom"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
flash = "0.0.6"
rand = "0.9.2"
libloading = "0.8.8"
quick-js = { version = "0.4.1", optional = true }
rutie = { version = "0.9", optional = true }

[features]
ocaml = []
ruby = ["dep:rutie"]
js = ["dep:quick-js"]
